--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/module-alias": "^2.0.4",
     "@types/node": "^22.8.0",
     "concurrently": "^9.0.1",
+    "module-alias": "^2.2.3",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
+  },
+  "_moduleAliases": {
+    "@src" : "dist/"
   }
 }
