--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,7 @@
     "module": "commonjs",
     "baseUrl": "./",
     "paths": {
-      "@services/*": ["src/services/*"],
-      "@config/*": ["src/config/*"],
-      "@controllers/*": ["src/controllers/*"],
-      "@dataAccess/*": ["src/dataAccess/*"],
-      "@models/*": ["src/models/*"],
-      "@routes/*": ["src/routes/*"],
-      "@scripts/*": ["src/scripts/*"],
+      "@src/*": ["src/*"],
       "@test/*": ["test/*"],
       "@public/*": ["public/*"]
     },
