--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,30 @@
 {
   "compilerOptions": {
-    "target": "es2016",                               
+    "target": "es2016",
     "module": "commonjs",
     "baseUrl": "./",
     "paths": {
-      "@src/*": ["src/*"],
-      "@test/*": ["test/*"],
-      "@public/*": ["public/*"]
+      "@src/*": [
+        "src/*"
+      ],
+      "@test/*": [
+        "test/*"
+      ],
+      "@public/*": [
+        "public/*"
+      ]
     },
-    "esModuleInterop": true, 
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,                                     
+    "strict": true,
     "skipLibCheck": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "include": [
+      "src"
+    ],
+    "exclude": [
+      "node_modules",
+      "dist"
+    ]
   }
 }
