--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "concurrently": "^9.0.1",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "ts-node-dev": "^2.0.0"
   },
   "_moduleAliases": {
     "@src": "dist/"
